# EasyGui_TK_Project

./: .gitignore  README.md  pyproject.toml
easygui_tk/: setup.py
